--- a/GUANABARA/moduloC/aula010/ex007.html
+++ b/GUANABARA/moduloC/aula010/ex007.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Somando balores</h1>
+    <h1>Somando valores</h1>
     <input type="number" name="txtn1" id="txtn1">
     <input type="number" name="txtn2" id="txtn2">
     <input type="button" value="somar" onclick="somar()">
@@ -31,7 +31,6 @@
             var n2 = Number(tn2.value);
             var s = n1 + n2;
             res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${s}</strong>`;
-
         }
    </script>
 </body>
