--- a/FIAP/aula004-DOM/index.html
+++ b/FIAP/aula004-DOM/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="container">
-        <button type="submit" onclick="alert('Clicou pelo html!!!')">Butao</button>
-        <button type="submit" id="btnClicar">Butao2</button>
-        <button type="submit" id="btnClicar2">Butao3</button>
-        <p id="paragrafo" style="font-size: 40px;">Click em um bota</p>
+        <button type="submit" onclick="alert('Clicou pelo html!!!')">Botao</button>
+        <button type="submit" id="btnClicar">Botao2</button>
+        <button type="submit" id="btnClicar2">Botao3</button>
+        <p id="paragrafo" style="font-size: 40px;">Click em um botao</p>
     
     <form id="form">
         <label for="nome">Nome</label>
@@ -25,6 +25,7 @@
             <option value="critica">critica</option>
             <option value="elogiap">elogio</option>
         </select>
+        <br><br>
         <textarea id="mensagem" style="width: 98%;"> Digite a sua mensagem</textarea>
         <button type="submit" id="btnFormEnviar">Enviar</button>
     </form>
