--- a/GUANABARA/Exercicios/EX001/index.html
+++ b/GUANABARA/Exercicios/EX001/index.html
@@ -8,14 +8,25 @@
 </head>
 <body onload="carregar()">
     <header>
-        <h1>Hora do dia</h1>
+        <h1>verificador de idade</h1>
     </header>
     <section>
-        <div id="msg">
-           hora
+        <div >
+            <p>Ano de nascimento:
+                <input type="number" name="txtano" id="txtano" min="0">
+            </p>
+            <p>Sexo:
+                <input type="radio" name="radsex" id="masc" checked>
+                <label for="masc">Masculino</label>
+                <input type="radio" name="radsex" id="fem">
+                <label for="fem">Feminino</label>
+            </p>
+            <p>
+                <input type="button" value="Verificar" onclick="verificar()">
+            </p>
         </div>
-        <div id="foto">
-            <img id="img" src="./img/manha.jpg">
+        <div id="res">
+            Preencha os dados acima para verificar
         </div>
    </section>
    <footer>
