--- a/ExChatGPT/ex003/index.html
+++ b/ExChatGPT/ex003/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <button id="botao">Clique aqui</button>
-      <p id="contador">Cliques: 0</p>
+      <button id="botaoToggle">Mostrar/Esconder</button>
+      <p id="texto" style="display: none">Olá! Você me encontrou!</p>
     </div>
     <script src="./app.js"></script>
   </body>
