--- a/ExChatGPT/ex005/index.html
+++ b/ExChatGPT/ex005/index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <input type="text" id="nome" placeholder="Digite seu nome" />
-      <button id="enviar">Enviar</button>
-      <p id="mensagem"></p>
+      <div id="semaforo"></div>
+
+      <div class="botoes">
+        <button id="vermelho">Vermelho</button>
+        <button id="amarelo">Amarelo</button>
+        <button id="verde">Verde</button>
+      </div>
     </div>
     <script src="./app.js"></script>
   </body>
